--- a/.github/workflows/jmeter-test.yml
+++ b/.github/workflows/jmeter-test.yml
@@ -19,9 +19,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-11-jdk-headless
-          curl -L https://dlcdn.apache.org//jmeter/binaries/apache-jmeter-5.5.tgz -o jmeter.tgz
+          
+          # Download and extract JMeter
+          curl -L https://dlcdn.apache.org//jmeter/binaries/apache-jmeter-5.6.3.tgz -o jmeter.tgz
           tar -xzf jmeter.tgz
-          ./apache-jmeter-5.5/bin/jmeter -n -t ./OdealWebsiteLoadTest.jmx -l ./results.jtl -e -o ./html-report
+          
+          # Run JMeter test plan
+          ./apache-jmeter-5.6.3/bin/jmeter -n -t ./path/to/OdealWebsiteLoadTest.jmx -l ./results.jtl -e -o ./html-report
 
       # Upload HTML report as an artifact
       - name: Upload HTML Report
