--- a/.github/workflows/jmeter-test.yml
+++ b/.github/workflows/jmeter-test.yml
@@ -1,5 +1,3 @@
-name: Odeal Performance Test Automation
-
 on:
   schedule:
     - cron: "0 * * * *" # Runs every hour
@@ -21,11 +19,11 @@ jobs:
           sudo apt-get install -y openjdk-11-jdk-headless
           
           # Download and extract JMeter
-          curl -L https://dlcdn.apache.org//jmeter/binaries/apache-jmeter-5.6.3.tgz -o jmeter.tgz
+          curl -L https://dlcdn.apache.org//jmeter/binaries/apache-jmeter-5.5.tgz -o jmeter.tgz
           tar -xzf jmeter.tgz
           
-          # Run JMeter test plan
-          ./apache-jmeter-5.6.3/bin/jmeter -n -t ./path/to/OdealWebsiteLoadTest.jmx -l ./results.jtl -e -o ./html-report
+          # Run JMeter test plan (ensure the path to the JMX file is correct)
+          ./apache-jmeter-5.5/bin/jmeter -n -t ./OdealWebsiteLoadTest.jmx -l ./results.jtl -e -o ./html-report
 
       # Upload HTML report as an artifact
       - name: Upload HTML Report
